--- a/part1/exercises/src/components/ChoresList.module.css
+++ b/part1/exercises/src/components/ChoresList.module.css
@@ -1,7 +1,10 @@
 .choresText {
-   color: black;
+   color: rgb(46, 26, 12);
+   font-style: italic;
 }
 
 .choresHeading {
    color: black;
+   font-family: 'Times New Roman', Times, serif;
+   text-decoration: underline;
 }
